# python-airzone

./: .gitignore  .pre-commit-config.yaml  README.rst  package.sh  package_test.sh  requirements.test.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish-to-test-pypi.yml
airzone/: __init__.py  aido.py  innobus.py  localapi.py  protocol.py  response.json  utils.py
tests/: __init__.py  test_localapi.py
