[metadata]
name = python-airzone 
version = 0.3.1
description = 'Python library for interfacing with Airzone using the modbus protocol',  # Required   
long_description = file: README.rst
keywords = innobus, airzone, modbus, HVAC
license = MIT
license_file = LICENSE

home-page  = https://github.com/gpulido/python-airzone  
author = Gabriel Pulido

author_email = gabriel.pulidodetorres@gmail.com

classifiers =    
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:

install_requires = 
    pyModbus
    pybase64
scripts =
    bin/airzone.py
# setup_requires =
#   setuptools_scm
    