[metadata]
name = python-airzone 
version = 0.17.0
description = 'Python library for interfacing with Airzone using the modbus protocol',  # Required   
long_description = file: README.rst
keywords = innobus, airzone, modbus, HVAC
license = MIT
license_file = LICENSE

home-page  = https://github.com/gpulido/python-airzone  
author = Gabriel Pulido

author_email = gabriel.pulidodetorres@gmail.com

classifiers =    
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9

[options]
packages = find:

install_requires =
    pyModbus==3.7.0
    pybase64
    importlib-metadata
    requests
    Python-Deprecated     
scripts =
    bin/airzone_cli.py
#setup_requires =
#    setuptools_scm
#    setuptools_scm_build_number
 
